<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SoundCloud</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_post">Post</string>
    <string name="btn_view">View</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_done">Done</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_shuffle">Shuffle</string>
    <string name="btn_repeat">Repeat</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="btn_unfollow">Unfollow</string>
    <string name="btn_like">Like</string>
    <string name="btn_unlike">Unlike</string>
    <string name="btn_save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="undo">Undo</string>
    <string name="website">Website</string>
    <string name="imprint">Imprint</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="terms_of_use_go">SoundCloud Go terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_support">Contact support</string>
    <string name="copyright_information">Copyright information</string>
    <string name="account_one_active">You can only have one active account</string>
    <string name="comments">Comments</string>
    <string name="display_name">Name</string>
    <string name="updated_time">Updated %s.</string>
    <string name="posted_time">Posted %s</string>
    <string name="plays_and_posted_time">%1$s · Posted %2$s</string>
    <string name="filter">Filter</string>
    <string name="following_zero">Followed by you</string>
    <string name="accessibility_stats_user_liked">Liked by you</string>
    <string name="accessibility_like_action">Like</string>
    <plurals name="accessibility_stats_likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="ads_advertisement">Advertisement</string>
    <string name="ads_companionless">The following track will start shortly.</string>
    <string name="ads_call_to_action">LEARN MORE</string>
    <string name="ads_why_ads">Why ads?</string>
    <string name="ads_why_ads_dialog_message">Every time you see or hear an ad, artists get paid. Occasional ads allow us to continue to support artists and keep SoundCloud free for listeners.</string>
    <string name="ads_skip_ad">Skip ad</string>
    <string name="ads_next_up_tracktitle_creatorname">Next up: %1$s (%2$s)</string>
    <string name="ads_ad_in_progress">Advertisement in progress</string>
    <string name="ads_reopen_to_continue">Please reopen your app to keep listening</string>
    <string name="ads_reopen_to_continue_short">Reopen app to keep listening</string>
    <string name="ads_resume_playing_ad_to_continue">Resume playing ad to continue</string>
    <string name="ads_skip_in_time">Skip in: %s</string>
    <string name="ads_now_playing">Now playing</string>
    <string name="ads_now_playing_tracktitle_username">Now playing: %1$s (%2$s)</string>
    <string name="ads_app">app</string>
    <string name="ads_video">video</string>
    <plurals name="ads_app_ratings">
        <item quantity="one">%s rating</item>
        <item quantity="other">%s ratings</item>
    </plurals>
    <string name="ads_watch_now">Watch Now</string>
    <string name="ads_no_thanks">No Thanks</string>
    <string name="ads_learn_more">Learn More</string>
    <string name="ads_opt_in_text">Put a pause on ads: watch this video and unlock %s-minutes of nonstop music</string>
    <string name="ads_start_session">Start Session</string>
    <string name="ads_sponsored_session_unlocked">You’ve unlocked your ad-free listening session.</string>
    <string name="authentication_I_forgot_my_password">Forgot your password?</string>
    <string name="authentication_add_info_add_image_msg">Smile! This image will appear on your profile.</string>
    <string name="authentication_add_info_msg">Almost done. Now choose a display name and add a photo to personalize your profile.</string>
    <string name="authentication_add_info_username_hint">Your display name</string>
    <string name="authentication_choose_a_password">At least 6 characters</string>
    <string name="authentication_error_incomplete_fields">Please fill in all fields.</string>
    <string name="authentication_error_invalid_email">Please enter a valid email address.</string>
    <string name="authentication_error_generic">Oops! An unexpected error occurred. Please try again.</string>
    <string name="authentication_error_no_connection_message">There’s a problem with your data connection. Check your network settings.</string>
    <string name="authentication_error_password_too_short">Your password must be at least 6 characters long.</string>
    <string name="authentication_error_age_not_valid">You must be at least 13 years old.</string>
    <string name="authentication_error_title">Error</string>
    <string name="authentication_log_in">Sign in</string>
    <string name="authentication_log_in_with_facebook">Sign in with Facebook</string>
    <string name="authentication_login_error_password_message">We couldn’t sign you in. Sure you have the right email and password?</string>
    <string name="authentication_login_progress_message">Signing you in</string>
    <string name="authentication_recover_password_failure">We can’t recover your password right now. Try again soon.</string>
    <string name="authentication_recover_password_failure_reason">Password recovery failed: %s</string>
    <string name="authentication_recover_password_unknown_email_address">Unknown Email Address</string>
    <string name="authentication_recover_password_success">Check your email for instructions about how to change your password.</string>
    <string name="authentication_recover_progress_message">Requesting password reset</string>
    <string name="authentication_sign_up">Create an account</string>
    <string name="authentication_signup_error_message">Something doesn’t sound right. Try signing up at SoundCloud.com.</string>
    <string name="authentication_signup_facebook_email_required">To create an account, we need your permission for Facebook to share your email with us.</string>
    <string name="authentication_your_email_address">Your email address</string>
    <string name="authentication_your_password">Your password</string>
    <string name="authentication_clear_image">Hold to clear image</string>
    <string name="authentication_login_error_message">We couldn’t sign you in. Please try again.</string>
    <string name="authentication_log_in_with_google_plus">Sign in with Google Plus</string>
    <string name="error_google_sign_in_failed">We couldn’t sign you in with Google+. To activate your Google+ account and try again, go to plus.google.com.</string>
    <string name="auth_disclaimer_title">One more step</string>
    <string name="auth_disclaimer_message">By selecting \"Continue\", you agree to the Terms of use and Privacy policy of SoundCloud.</string>
    <string name="facebook_authentication_failed_message">Try again soon or sign in using your email address and password.</string>
    <string name="authentication_recover_password_msg">Enter your email address and we’ll send you a link to change your password. If you still need help, visit our Help Center.</string>
    <string name="authentication_recover_password_visit_our_Help_Center">Visit our Help center</string>
    <string name="authentication_recover_password_send">Send</string>
    <string name="authentication_blocked_title">We couldn’t create an account for you</string>
    <string name="authentication_blocked_message">Our robots think this sign-up looks too much like spam. If you think this is a mistake, contact SoundCloud support.</string>
    <string name="authentication_captcha_message">We’re having some trouble signing you in.</string>
    <string name="authentication_email_taken_message">That email address is already associated with an account. Enter a different email address or try signing in.</string>
    <string name="authentication_email_invalid_message">The domain you have entered seems to not be capable of receiving emails. Did you spell it correctly?</string>
    <string name="authentication_age_restriction">You need to be at least %1$s years old to create an account in this region.</string>
    <string name="authentication_email_other_error_message">Sorry we couldn’t create an account for you with the details you provided.</string>
    <string name="authentication_error_unable_to_use_google_play_services">Google+ sign in cannot be used without Google Play Services. Please try another sign in method.</string>
    <string name="error_toast_user_not_logged_in">Please sign in or sign up to open this link.</string>
    <string name="shortcut_search">Search</string>
    <string name="shortcut_play_likes">Play Likes</string>
    <string name="info_empty_other_message">This person hasn’t added a profile description yet.</string>
    <string name="info_empty_you_message">Your profile is empty.</string>
    <string name="info_empty_you_secondary">To edit your profile, sign in to SoundCloud on your desktop.</string>
    <string name="list_empty_notification_message">You don’t have any notifications yet.</string>
    <string name="ok_got_it">OK, got it</string>
    <string name="landing_title">Find music you love.</string>
    <string name="landing_sub_title">Discover new artists.</string>
    <string name="share">Share</string>
    <string name="repost">Repost on SoundCloud</string>
    <string name="next">Next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="btn_revert_to_original">Revert to original</string>
    <string name="charts_header">SoundCloud charts</string>
    <string name="charts_genre_view_all">Browse all genres</string>
    <string name="charts_by_genre">Charts by genre</string>
    <string name="stations_start_track_station">Start track station</string>
    <string name="facebook_invites_title">Invite friends to SoundCloud</string>
    <string name="facebook_invites_description">Sharing is caring. Invite your friends to experience SoundCloud with you.</string>
    <string name="facebook_invites_button">Invite friends</string>
    <string name="more_activity">Notifications</string>
    <string name="more_record">Record</string>
    <string name="more_notification_settings">Notification settings</string>
    <string name="more_basic_settings">Basic settings</string>
    <string name="more_report_bug">Report bug</string>
    <string name="more_help_center">Help</string>
    <string name="more_legal">Legal</string>
    <string name="more_sign_out">Sign out</string>
    <string name="more_view_public_profile">View public profile</string>
    <string name="more_subscription">Subscription</string>
    <string name="more_subscription_check">Already subscribed? Check now</string>
    <string name="more_upsell">Upgrade to SoundCloud Go</string>
    <string name="go_onboarding_retry">Loading failed. Retry?</string>
    <string name="go_onboarding_offline_settings_title">Save everything automatically</string>
    <string name="go_onboarding_offline_settings_subtext">Selecting this will save all your current and future likes, playlists and albums offline automatically.</string>
    <string name="go_onboarding_offline_settings_continue">OK, got it</string>
    <string name="go_offboard_resubscribe">Resubscribe</string>
    <string name="more_offline_sync_settings">Offline listening settings</string>
    <string name="play_next">Add to Next up</string>
</resources>