<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/play_next"
        android:title="@string/play_next" />
    <item
        android:id="@+id/start_station"
        android:title="@string/stations_start_track_station" />
    <item
        android:id="@+id/add_to_likes"
        android:title="@string/btn_like" />
    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/remove_from_playlist"
        android:title="@string/remove_from_playlist"
        android:visible="false" />
    <item
        android:id="@+id/toggle_repost"
        android:title="@string/repost"
        android:visible="false" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:visible="false" />
</menu>
