<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/btn_min_height"
    android:gravity="end"
    android:id="@+id/bottom_bar"
    android:layout_alignParentBottom="true"
    tools:showIn="@layout/sc_create">

    <com.soundcloud.android.view.CustomFontButton
        android:id="@+id/btn_delete"
        style="@style/BorderlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ash"
        android:text="@string/btn_delete" />

    <com.soundcloud.android.view.CustomFontButton
        android:id="@+id/btn_next"
        style="@style/BorderlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/soundcloud_orange"
        android:text="@string/next" />

    <com.soundcloud.android.view.CustomFontButton
        android:id="@+id/btn_revert"
        style="@style/BorderlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ash"
        android:text="@string/btn_revert_to_original" />

    <com.soundcloud.android.view.CustomFontButton
        android:id="@+id/btn_apply"
        style="@style/BorderlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/soundcloud_orange"
        android:text="@string/btn_apply" />

</LinearLayout>
