<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/profile_header"
        style="@style/More.Container"
        android:orientation="vertical"
        tools:ignore="MergeRootFrame">

        <View style="@style/Divider.Background" />
        <View style="@style/Divider.Section" />

        <LinearLayout
            android:id="@+id/header_layout"
            style="@style/More.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.soundcloud.android.view.CircularBorderImageView
                android:id="@+id/image"
                style="@style/More.HeaderImage" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.soundcloud.android.view.CustomFontTextView
                    android:id="@+id/username"
                    style="@style/More.HeaderText.Username" />

                <com.soundcloud.android.view.CustomFontTextView
                    android:id="@+id/profile_link"
                    style="@style/More.HeaderText.ProfileLink"
                    android:text="@string/more_view_public_profile" />

            </LinearLayout>
        </LinearLayout>

        <View style="@style/Divider.Section" />
        <View style="@style/Divider.Background" />
        <View style="@style/Divider.Section" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_activity_link"
            style="@style/More.NavItem"
            android:text="@string/more_activity" />

        <View style="@style/Divider.Item" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_record_link"
            style="@style/More.NavItem"
            android:text="@string/more_record" />

        <View style="@style/Divider.Section" />
        <View style="@style/Divider.Background" />
        <View style="@style/Divider.Section" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_basic_settings_link"
            style="@style/More.NavItem"
            android:text="@string/more_basic_settings" />

        <View style="@style/Divider.Item" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_notification_preferences_link"
            style="@style/More.NavItem"
            android:text="@string/more_notification_settings" />

        <LinearLayout
            android:id="@+id/more_offline_sync_settings_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View style="@style/Divider.Item" />

            <com.soundcloud.android.view.CustomFontTextView
                style="@style/More.NavItem"
                android:duplicateParentState="true"
                android:text="@string/more_offline_sync_settings" />
        </LinearLayout>

        <View style="@style/Divider.Section" />
        <View style="@style/Divider.Background" />
        <View style="@style/Divider.Section" />

        <LinearLayout
            android:id="@+id/more_subscription_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.soundcloud.android.view.CustomFontTextView
                    style="@style/More.NavItem"
                    android:layout_weight="2"
                    android:text="@string/more_subscription" />

                <com.soundcloud.android.view.CustomFontTextView
                    android:id="@+id/more_subscription_tier"
                    style="@style/More.NavItem.Right"
                    android:layout_weight="1"
                    android:text="@string/tier_free" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_upsell_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View style="@style/Divider.Item" />

                <com.soundcloud.android.view.CustomFontTextView
                    android:id="@+id/more_upsell"
                    style="@style/More.NavItem.Upsell"
                    android:text="@string/more_upsell" />
            </LinearLayout>

            <View style="@style/Divider.Section" />
            <View style="@style/Divider.Background" />
            <View style="@style/Divider.Section" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_restore_subscription_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.soundcloud.android.view.CustomFontTextView
                android:id="@+id/more_restore_subscription"
                style="@style/More.NavItem"
                android:text="@string/more_subscription_check" />

            <View style="@style/Divider.Section" />
            <View style="@style/Divider.Background" />
            <View style="@style/Divider.Section" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_report_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.soundcloud.android.view.CustomFontTextView
                style="@style/More.NavItem"
                android:duplicateParentState="true"
                android:text="@string/more_report_bug" />

            <View style="@style/Divider.Item" />
        </LinearLayout>

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_help_center_link"
            style="@style/More.NavItem"
            android:text="@string/more_help_center" />

        <View style="@style/Divider.Item" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_legal_link"
            style="@style/More.NavItem"
            android:text="@string/more_legal" />

        <View style="@style/Divider.Section" />
        <View style="@style/Divider.Background" />
        <View style="@style/Divider.Section" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_sign_out_link"
            style="@style/More.NavItem"
            android:text="@string/more_sign_out" />

        <View style="@style/Divider.Section" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/more_version_text"
            style="@style/More.VersionText" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
