<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/tour_logo"
        android:layout_width="@dimen/tour_logo_dimension"
        android:layout_height="@dimen/tour_logo_dimension"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/tour_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/player_gradient_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/landing_gradient_bottom"/>

    <LinearLayout
        android:id="@+id/onboarding_text"
        style="@style/TourOverlayTextHolderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <com.soundcloud.android.view.CustomFontTextView
            style="@style/Onboarding.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_title" />

        <com.soundcloud.android.view.CustomFontTextView
            style="@style/Onboarding.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_sub_title" />

        <RelativeLayout
            android:id="@+id/tour_bottom_bar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/landing_bottom_bar_height"
            tools:visibility="visible"
            style="@style/Onboarding.LoginCreateAccountBar">

            <com.soundcloud.android.view.CustomFontButton
                android:id="@+id/btn_create_account"
                style="@style/Onboarding.CreateAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/authentication_sign_up" />

            <com.soundcloud.android.view.CustomFontButton
                android:id="@+id/btn_login"
                style="@style/Onboarding.LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/btn_create_account"
                android:text="@string/authentication_log_in" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
