<?xml version="1.0" encoding="UTF-8"?>
<com.soundcloud.android.onboarding.auth.AcceptTermsLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="match_parent"
                                                        android:gravity="center">
    <LinearLayout style="@style/SignUp.Content">

        <com.soundcloud.android.view.CustomFontTextView android:id="@android:id/title"
                  style="@style/SignUp.TermsText"
                  android:text="@string/auth_disclaimer_title"/>
        <com.soundcloud.android.view.CustomFontTextView android:id="@android:id/message"
                  style="@style/SignUp.TermsMessage"
                  android:text="@string/auth_disclaimer_message"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="10dp"
                      android:orientation="horizontal">
            <com.soundcloud.android.view.CustomFontButton android:id="@+id/btn_cancel"
                    style="@style/Onboarding.CancelButton"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:text="@android:string/cancel"/>
            <com.soundcloud.android.view.CustomFontButton android:id="@+id/btn_accept_terms"
                    style="@style/Onboarding.NextButton"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/btn_continue"/>
        </LinearLayout>
    </LinearLayout>
</com.soundcloud.android.onboarding.auth.AcceptTermsLayout>
