<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminateOnly="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/content"
        style="@style/ListItemNotificationLayout">

        <LinearLayout
            android:id="@+id/friends"
            style="@style/FacebookInvitesFriends"
            android:visibility="gone">

            <com.soundcloud.android.view.CircularBorderImageView
                android:id="@+id/friend_1"
                style="@style/FacebookInvitesFriendImage" />

            <com.soundcloud.android.view.CircularBorderImageView
                android:id="@+id/friend_2"
                style="@style/FacebookInvitesFriendImageOverlap" />

            <com.soundcloud.android.view.CircularBorderImageView
                android:id="@+id/friend_3"
                style="@style/FacebookInvitesFriendImageOverlap" />
        </LinearLayout>

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/facebook_invite_text"
            style="@style/ListItemNotificationTitle"
            android:text="@string/facebook_invites_title" />

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/facebook_invite_introduction_text"
            style="@style/ListItemNotificationDescription"
            android:text="@string/facebook_invites_description" />

        <com.soundcloud.android.playback.ui.view.RoundedColorButton
            android:id="@+id/action_button"
            style="@style/ListItemNotificationButton"
            android:text="@string/facebook_invites_button" />
    </LinearLayout>
</merge>
