<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/charts_bucket"
    style="@style/Module.Background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View style="@style/Divider.Section" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/header"
        style="@style/Module.Header"
        android:text="@string/charts_header" />

    <View style="@style/Divider.Item" />

    <com.soundcloud.android.collection.CollectionPreviewView
        android:id="@+id/charts_new_and_hot_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider.Item" />

    <com.soundcloud.android.collection.CollectionPreviewView
        android:id="@+id/charts_top_fifty_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider.Section" />

    <View style="@style/Divider.Background" />

    <View style="@style/Divider.Section" />

    <com.soundcloud.android.view.CustomFontTextView
        android:id="@+id/genre_charts_header"
        style="@style/Module.Header"
        android:text="@string/charts_by_genre" />

    <View style="@style/Divider.Item" />

    <com.soundcloud.android.collection.CollectionPreviewView
        android:id="@+id/charts_first_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider.Item" />

    <com.soundcloud.android.collection.CollectionPreviewView
        android:id="@+id/charts_second_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider.Item" />

    <com.soundcloud.android.collection.CollectionPreviewView
        android:id="@+id/charts_third_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider.Item" />

    <FrameLayout
        android:id="@+id/charts_genre_view_all"
        style="@style/ViewAllContainer">

        <com.soundcloud.android.view.CustomFontTextView
            android:id="@+id/charts_genre_view_all_text"
            style="@style/ViewAllText"
            android:text="@string/charts_genre_view_all" />

    </FrameLayout>

    <View style="@style/Divider.Section" />

    <View style="@style/Divider.Background" />

</LinearLayout>

